# stepik-utils

./: pyproject.toml
src/: __init__.py
src/stepic_utils/: quiz.py
stepic_utils/: quiz.py  stepicrun.py  utils.py
stepic_utils/tests/: test_quiz.py  test_run.py  utils.py
stepic_utils/tests/examples/: ab.py  ab_dict.py  ab_float.py  divisors.py  even_numbers.py  fib.py  hints.py  rounding_errors.py  string_quiz_with_solve.py  string_quiz_with_solve_fail.py  string_quiz_without_solve.py
stepic_utils/tests/examples/code/: generate_datasets.py  generate_datasets_without_solve.py  generate_tuples.py  generate_tuples_without_solve.py
